# AI-Humanoid-Book-With-Chatbot-Repo

./: .gitignore  COMPLIANCE.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: README.md  pyproject.toml  requirements.txt
backend/src/api/: main.py
backend/src/api/routes/: auth.py  chat.py  embed.py  personalize.py  selection.py  translate.py
backend/src/config/: settings.py
backend/src/models/: auth.py  chat.py  chat_message.py  chat_session.py  content_chunk.py  embed.py  personalization.py  personalize.py  selection.py  translate.py  translation.py  user.py
backend/src/services/: auth_service.py  embedding_service.py  personalization_service.py  rag_service.py  translation_service.py
backend/src/utils/: helpers.py  logger.py  security.py  validators.py
frontend/: README.md  docusaurus.config.js  package.json
frontend/src/css/: custom.css
history/prompts/001-module-1-robotic-nervous-system/: 1-create-ros2-module-specification.spec.prompt.md
history/prompts/002-module-2-digital-twin/: 1-create-digital-twin-specification.spec.prompt.md
history/prompts/003-module-3-isaac-brain/: 1-create-isaac-brain-specification.spec.prompt.md
history/prompts/004-module-4-vla-capstone/: 0001-module-4-vla-implementation-plan.plan.prompt.md  0002-module-4-vla-tasks-generation.tasks.prompt.md  0003-vla-module-implementation-complete.green.prompt.md  1-create-vla-capstone-specification.spec.prompt.md
history/prompts/constitution/: 0001-create-ai-native-book-project-constitution.constitution.prompt.md
my-website/: docusaurus.config.ts  package.json  sidebars.js
my-website/docs/: intro.md
my-website/docs/module-1-robotic-nervous-system/: week-1.md  week-2.md  week-3.md  week-4.md  week-5.md
my-website/docs/module-2-digital-twin/: week-6.md  week-7.md
my-website/docs/module-3-isaac-brain/: week-10.md  week-8.md  week-9.md
my-website/docs/module-4-vla-capstone/: week-11.md  week-12.md  week-13.md
my-website/src/components/: HomepageChat.tsx.bk  NavbarChat.tsx  RagChatbot.tsx
my-website/src/components/HomepageFeatures/: index.tsx
my-website/src/contexts/: ChatContext.tsx
my-website/src/css/: custom.css
my-website/src/pages/: index.tsx
my-website/src/theme/: NavbarChatItem.tsx
physical-ai-backend/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  utils.py
physical-ai-backend/routers/: __init__.py  chat.py  embeddings.py
scripts/: deploy.sh  generate-embeddings.py  generate_embeddings.py  setup_db.py
specs/001-module-1-robotic-nervous-system/: spec.md
specs/002-module-2-digital-twin/: spec.md
specs/003-module-3-isaac-brain/: spec.md
specs/004-module-4-vla-capstone/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+11 files in other folders)
